<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, DrizztActivity!</string>
    <string name="app_name">Drizzt</string>
    <string name="createActivity">Create New Activity</string>
    <string name="newActivityString">This is a new activity</string>
    <string name="newActivity">New Activity</string>
    <string name="FragmentActivity">Fragment Activity</string>
    <string name="fragment">This is a fragment activity.</string>
    <string name="createFragmentActivity">Create Fragment Activity</string>
    <string name="createCircleActivity">Create Circle Activity</string>
	<string name="CircleActivity">Circle Activity</string>
	<string name="MovingCircle">Moving Circle Activity</string>
    <string name="createMovingCircleActivity">Create Moving Circle Activity</string>
    <string name="CircleOffset">Circle Offset</string>
    <string name="BluetoothActivity">Bluetooth Activity</string>
    <string name="CreateBluetoothActivity">Create Bluetooth Activity</string>
    <string name="bluetoothNotAvailable">Bluetooth Not Available</string>
    <string name="CreateUsbActivity">Create Usb Activity</string>
    <string name="UsbActivity">Usb Activity</string>
</resources>