<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello" />
    
    <Button 
        android:id="@+id/activityCreation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/createActivity"
        android:onClick="createActivity"/>

    <Button 
        android:id="@+id/fragmentActivityCreation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/createFragmentActivity"
        android:onClick="createFragmentActivity"/>
    
    <Button 
        android:id="@+id/circleActivityCreation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/createCircleActivity"
        android:onClick="createCircleActivity"/>
    
     <Button 
        android:id="@+id/movingCircleActivityCreation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/createMovingCircleActivity"
        android:onClick="createMovingCircleActivity"/>
</LinearLayout>